# Cpp-OOP-AISD

./: .gitignore
AISD1/Clab1/: CMakeLists.txt  lab1.cpp
AISD1/Clab2-3/: CMakeLists.txt  lab2-3.cpp  my_list.cpp
AISD2/Lab1/: CMakeLists.txt  class.cpp  funk.cpp  test.cpp
AISD2/Lab2/: class.cpp  main.cpp
AISD2/Lab3/: class.h  graph_data.json  main.cpp  visualize_graph.py
AISD2/Pract/: array.cpp  graph1.cpp  graph2.cpp  hash.cpp  list1.cpp  list2.cpp  tree.cpp
OOP/Class/: CMakeLists.txt  Proba.cpp
OOP/lab1/: CMakeLists.txt  lab1  lab1.cpp
OOP/lab2/: CMakeLists.txt  lab2.cpp  test.cpp  vector.cpp  vector.h
OOP/lab30/: CMakeLists.txt  Function.cpp  Function.h  lab30.cpp
OOP/lab4/: CMakeLists.txt  Class.h  ClassF.cpp  Function.h  Functions.cpp  Menu.cpp  lab4.cpp
OOP/lab5/: CMakeLists.txt  Class.cpp  Class.h  Func.cpp  Func.h  Menu.cpp  lab5.cpp
